<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">POPULAR MOVIES</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <string name="launch_media_streamer">This will launch my spotify streamer app!</string>
    <string name="launch_scores">This will launch my football scores app!</string>
    <string name="launch_library">This will launch my library app!</string>
    <string name="launch_build_bigger">This will launch my build it bigger app!</string>
    <string name="launch_reader">This will launch my xyz reader app!</string>
    <string name="launch_capstone">This will launch my capstone app!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_movies">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="movie_poster">Movie poster</string>
    <string name="pref_movies_sort_by_key">sort_by</string>
    <string name="pref_movies_sort_by_label">Sort by</string>
    <string name="pref_movies_sort_by_popularity">popularity.desc</string>

    <string-array name="pref_movies_sort_by_entries">
        <item>Popularity</item>
        <item>Highest Rated</item>
    </string-array>

    <string-array name="pref_movies_sort_by_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
    </string-array>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="network_unavailable">Couldn\'t fetch the resource because there is no network available.</string>
</resources>
